tests/PhiCore/compile_failure/src/math/vector2/unary_minus.fail.cpp
#include <phi/math/vector2.hpp>

int main()
{
    phi::vector2<unsigned> v(1, 2);

    phi::vector2<unsigned> v2 = -v;
}
